# race_monitor

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  constraints.txt  debug_advanced_metrics.py  package.json  package.xml  race_monitor_data.txt  regenerate_race_results_with_ape_rpe.py  requirements.txt  setup.cfg  setup.py  test_simple.py
.github/workflows/: ci.yaml
config/: race_monitor.rviz  race_monitor.yaml
data/: race_results.csv
docs/: API_REFERENCE.md  CONFIGURATION.md  EVO_INTEGRATION.md  INSTALLATION.md  README_REFACTORING_SUMMARY.md  RESULTS.md  TROUBLESHOOTING.md  USAGE.md
horizon_mapper/horizon_mapper/: ref_trajectory.csv
launch/: example_race_setup.py  race_monitor.launch.py  race_monitor_launch.py
race_monitor/: __init__.py  data_manager.py  evo_plotter.py  lap_detector.py  lap_timing_monitor.py  logger_utils.py  metadata_manager.py  performance_monitor.py  race_evaluation_example.py  race_evaluator.py  race_monitor.py  reference_trajectory_manager.py  research_evaluator.py  trajectory_analyzer.py  visualization_engine.py  visualization_publisher.py
ref_trajectory/: .gitkeep  README.md
resource/sample_output_data/: terminal_log.txt
resource/sample_output_data/results/csv/: race_evaluation.csv  race_results.csv  race_summary.csv
resource/sample_output_data/results/json/: race_evaluation.json  race_results.json  race_summary.json
resource/sample_output_data/results/rsum/: race_summary.rsum
scripts/: fix_evaluation_outputs.py  verify_numpy_fix.sh
test/: README.md  __init__.py  validate_environment.py
web_ui/: .gitignore  README.md  dev-backend-dynamic.sh  dev-backend-simple.sh  dev-dynamic.sh  dev-frontend-dynamic.sh  dev-frontend-simple.sh  dev-simple.sh  port_manager.py  quick-start.sh  setup-dev.sh  setup-simple.sh  start.sh  test-api.sh  test-backend.sh  test-run.sh  test-setup.sh
web_ui/backend/: config_manager.py  data_analyzer.py  evo_integration.py  live_monitor.py  main.py  requirements.txt
web_ui/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
web_ui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.dynamic.ts  vite.config.ts
web_ui/frontend/src/: App.tsx  index.css
web_ui/frontend/src/components/: ConfigEditor.tsx  Header.tsx  LQTGraph.tsx  Navbar.tsx  NotificationSystem.tsx  Sidebar.tsx
(+8 files in other folders)
