<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>race_monitor</name>
  <version>2.0.5</version>
  <description>ROS2 node for tracking laps, lap times, and race statistics in autonomous racing with
    EVO trajectory analysis</description>
  <maintainer email="mohammed@azab.io">Mohammed Azab</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>evo</depend>
  <depend>tf2_ros</depend>
  <!-- giu_f1t_interfaces dependency removed - using standard ROS2 messages -->

  <!-- Python package dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-psutil</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>